# vcpkg_boilerplate

./: CMakeLists.txt  README.md  generate_vss.bat
sources/: CMakeLists.txt  main.cpp  main.h
tests/: CMakeLists.txt  main_test.cpp
